apps/kube/firecracker/manifests/firecracker-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: firecracker
    labels:
        app: firecracker
        pod-security.kubernetes.io/enforce: privileged
        pod-security.kubernetes.io/audit: privileged
        pod-security.kubernetes.io/warn: privileged
