apps/kube/firecracker/manifests/firecracker-net-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: firecracker-ctl-net
    namespace: firecracker
    labels:
        app: firecracker-ctl-net
        kbve.com/category: virtualization
        kbve.com/stack: core
        kbve.com/managed-by: argocd
spec:
    type: ClusterIP
    selector:
        app: firecracker-ctl-net
    ports:
        - port: 9001
          targetPort: api
          protocol: TCP
          name: api
